fix: adjust list item spacing

--- a/src/theme-src/src/theme-custom.css
+++ b/src/theme-src/src/theme-custom.css
@@ -318,13 +318,17 @@ section ul > li {
   @apply pl-2;
 }
 
+li > p {
+  @apply my-3;
+}
+
 dt {
   @apply font-medium tracking-wide;
 }
 
 dd {
   @apply pl-6;
-  p {
+  & > p {
     @apply mt-2;
   }
 }
